trying to fix pixel problem on mobile

--- a/slider/java.css
+++ b/slider/java.css
@@ -74,7 +74,7 @@
     background-image:url('imgs/landingpage4.jpeg');
     background-size:cover;
     background-blend-mode: color;
-    background-color:rgba(0,0,0,0.8);
+    background-color:rgba(0,0,0,0.7);
     align-items:center;
     font-family: Open Sans Condensed;
     z-index:100;
